Squashing all commits.